#add_executable(test3 test3.cpp)
#target_link_libraries(test3 xnet)

#add_executable(test4 test4.cpp)
#target_link_libraries(test4 xnet)

#add_executable(test5 test5.cpp)
#target_link_libraries(test5 xnet)

#add_executable(test6 test6.cpp)
#target_link_libraries(test6 xnet)

#add_executable(test7 test7.cpp)
#target_link_libraries(test7 xnet)

add_executable(test8 test8.cpp)
target_link_libraries(test8 xnet)
